--- a/MVC/MVD_Day1/MVD_Day1/MVD_Day1.csproj
+++ b/MVC/MVD_Day1/MVD_Day1/MVD_Day1.csproj
@@ -120,14 +120,17 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\DemoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HRController.cs" />
+    <Compile Include="Controllers\RegisterController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Register.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -171,6 +174,13 @@
     <Content Include="Views\HR\ListEmployee.cshtml" />
     <Content Include="Views\HR\DisplayEmployee.cshtml" />
     <Content Include="Views\HR\ListDepartment.cshtml" />
+    <Content Include="Views\Data\Data_Transfer.cshtml" />
+    <Content Include="Views\Data\Index.cshtml" />
+    <Content Include="Views\Data\Rules1.cshtml" />
+    <Content Include="Views\Data\receiveindex.cshtml" />
+    <Content Include="Views\Data\Thirdrequest.cshtml" />
+    <Content Include="Views\HR\ReceiveTempdata.cshtml" />
+    <Content Include="Views\Register\CreateRegistration.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
